--- a/Portfolio_DB_DCA_Strategy.ipynb
+++ b/Portfolio_DB_DCA_Strategy.ipynb
@@ -27,21 +27,21 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: ipython-sql in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (0.4.0)\n",
-      "Requirement already satisfied: ipython>=1.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (7.22.0)\n",
-      "Requirement already satisfied: six in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.15.0)\n",
-      "Requirement already satisfied: sqlalchemy>=0.6.7 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.4.28)\n",
       "Requirement already satisfied: prettytable<1 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.7.2)\n",
+      "Requirement already satisfied: six in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.15.0)\n",
       "Requirement already satisfied: sqlparse in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.4.2)\n",
       "Requirement already satisfied: ipython-genutils>=0.1.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.18.0)\n",
-      "Requirement already satisfied: pygments in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (2.8.1)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (3.0.18)\n",
-      "Requirement already satisfied: colorama in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.4.4)\n",
-      "Requirement already satisfied: backcall in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: pickleshare in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
-      "Requirement already satisfied: decorator in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (4.4.2)\n",
-      "Requirement already satisfied: traitlets>=4.2 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (5.0.5)\n",
+      "Requirement already satisfied: ipython>=1.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (7.22.0)\n",
+      "Requirement already satisfied: sqlalchemy>=0.6.7 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.4.28)\n",
       "Requirement already satisfied: setuptools>=18.5 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (41.2.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.18.0)\n",
+      "Requirement already satisfied: traitlets>=4.2 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (5.0.5)\n",
+      "Requirement already satisfied: decorator in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (4.4.2)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (3.0.18)\n",
+      "Requirement already satisfied: pygments in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (2.8.1)\n",
+      "Requirement already satisfied: backcall in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.4.4)\n",
+      "Requirement already satisfied: pickleshare in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
       "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from sqlalchemy>=0.6.7->ipython-sql) (1.1.2)\n",
       "Requirement already satisfied: importlib-metadata in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from sqlalchemy>=0.6.7->ipython-sql) (3.9.0)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from jedi>=0.16->ipython>=1.0->ipython-sql) (0.8.1)\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "floating-forth",
    "metadata": {},
    "outputs": [],
@@ -128,18 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "productive-telescope",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table DCA_portfolio already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_table()"
    ]
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "infrared-settle",
    "metadata": {},
    "outputs": [],
@@ -171,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "id": "otherwise-specification",
    "metadata": {},
    "outputs": [],
@@ -189,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "id": "static-decision",
    "metadata": {},
    "outputs": [],
@@ -206,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "understanding-feeding",
    "metadata": {},
    "outputs": [
@@ -217,7 +209,7 @@
        " ('company_name2', 'yyy', 75, 102.5, 102.5, 7687.5, 7687.5, 0.0, 1.0)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "seasonal-sudan",
    "metadata": {},
    "outputs": [],
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "painful-environment",
    "metadata": {},
    "outputs": [],
@@ -269,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "outer-intro",
    "metadata": {},
    "outputs": [],
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "figured-airplane",
    "metadata": {},
    "outputs": [],
@@ -305,20 +297,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "encouraging-chuck",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_share_in_portfolio(c, actual_value):\n",
     "    ''' get the current size of the position in the portfolio [%] '''\n",
-    "    c.execute(\"SELECT actual_value FROM DCA_portfolio \")\n",
+    "    c.execute(\"SELECT actual_value FROM DCA_portfolio\")\n",
     "    psvl = c.fetchall()\n",
     "    if not psvl:\n",
     "        return 100\n",
     "    else:\n",
     "        avl = [x[0] for x in psvl]\n",
     "        return 100*actual_value/(sum(avl)+actual_value) # sum of existing + the new position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "norman-sierra",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_shares(c, ticker, shares):\n",
+    "    c.execute(\"SELECT shares FROM DCA_portfolio WHERE ticker=?\", (ticker,))\n",
+    "    return c.fetchall()[0][0]+shares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "elegant-relationship",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def asset_exist(company_name, ticker):\n",
+    "    conn = sqlite3.connect('portfolio.db')\n",
+    "    c = conn.cursor()\n",
+    "    c.execute(\"SELECT company_name, ticker FROM DCA_portfolio WHERE company_name=? AND ticker=?\", (company_name, ticker))\n",
+    "    exist = c.fetchone()\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "    return bool(exist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "mysterious-scenario",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def round_2(n):\n",
+    "    return round(n, 2)"
    ]
   },
   {
@@ -331,24 +363,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "fleet-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# would be better to perform it as a class\n",
-    "def add_asset(company_name, ticker, shares, price):\n",
+    "# would be better to perform it as a class (along with adding functions)\n",
+    "def add_shares(company_name, ticker, shares, price):\n",
     "    conn = sqlite3.connect('portfolio.db')\n",
     "    c = conn.cursor()\n",
     "    \n",
-    "    last_buy_price = get_last_buy_price(c, ticker, price)\n",
-    "    avg_price = get_avg_price(c, ticker, price, shares)\n",
-    "    invested_value = get_invested_value(c, ticker, price, shares)\n",
-    "    actual_value = get_actual_value(c, ticker, price, shares)\n",
-    "    profit = 100*(actual_value-invested_value)/invested_value\n",
-    "    share_in_portfolio = get_share_in_portfolio(c, actual_value) # that will need to be updated (the values to be wrong after adding new asset)\n",
+    "    last_buy_price = price #get_last_buy_price(c, ticker, price)\n",
+    "    avg_price = round_2(get_avg_price(c, ticker, price, shares))\n",
+    "    invested_value = round_2(get_invested_value(c, ticker, price, shares))\n",
+    "    actual_value = round_2(get_actual_value(c, ticker, price, shares))\n",
+    "    profit = round_2(100*(actual_value-invested_value)/invested_value)\n",
+    "    share_in_portfolio = round_2(get_share_in_portfolio(c, actual_value)) # that will need to be updated (the values to be wrong after adding new asset)\n",
     "    \n",
-    "    c.execute(\"INSERT INTO DCA_portfolio VALUES (?,?,?,?,?,?,?,?,?)\", (company_name, ticker, shares, last_buy_price, avg_price, invested_value, actual_value, profit, share_in_portfolio))\n",
+    "    if asset_exist(company_name, ticker):\n",
+    "        shares = get_shares(c, ticker, shares)\n",
+    "        c.execute(\"\"\"UPDATE DCA_portfolio \n",
+    "                  SET shares=?,\n",
+    "                      last_buy_price=?,\n",
+    "                      avg_price=?,\n",
+    "                      invested_value=?,\n",
+    "                      actual_value=?,\n",
+    "                      profit=?,\n",
+    "                      share_in_portfolio=?\n",
+    "                  WHERE company_name=? AND ticker=?\"\"\", (shares, last_buy_price, avg_price, invested_value, actual_value, profit, share_in_portfolio, company_name, ticker))\n",
+    "    else:\n",
+    "        c.execute(\"INSERT INTO DCA_portfolio VALUES (?,?,?,?,?,?,?,?,?)\", (company_name, ticker, shares, last_buy_price, avg_price, invested_value, actual_value, profit, share_in_portfolio))\n",
     "\n",
     "    conn.commit()\n",
     "    conn.close()"
@@ -364,12 +408,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "pending-rally",
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_asset('test', 't2', 200, 37.5)"
+    "add_shares('test', 't2', 200, 37.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "consecutive-yield",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('company_name', 'xxx', 100, 50.2, 48.25, 4825.0, 5020.0, 195.0, 1.0),\n",
+       " ('company_name2', 'yyy', 75, 102.5, 102.5, 7687.5, 7687.5, 0.0, 1.0),\n",
+       " ('test', 't2', 200, 37.5, 37.5, 7500.0, 7500.0, 0.0, 37.11)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_portfolio()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "touched-diabetes",
+   "metadata": {},
+   "source": [
+    "Let's update asset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "strong-cylinder",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_shares('company_name', 'xxx', 50, 51.2)\n",
+    "add_shares('company_name2', 'yyy', 100, 97.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "arbitrary-samoa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('company_name', 'xxx', 150, 51.2, 49.23, 7385.0, 7680.0, 3.99, 27.54),\n",
+       " ('company_name2', 'yyy', 175, 97.5, 99.64, 17437.5, 17062.5, -2.15, 42.73),\n",
+       " ('test', 't2', 200, 37.5, 37.5, 7500.0, 7500.0, 0.0, 37.11)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_portfolio()"
    ]
   },
   {
@@ -382,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "lyric-cinema",
    "metadata": {},
    "outputs": [],
@@ -390,18 +499,18 @@
     "def update_the_share_in_portfolio():\n",
     "    conn = sqlite3.connect('portfolio.db')\n",
     "    c = conn.cursor()\n",
-    "    c.execute(\"SELECT company_name, actual_value FROM DCA_portfolio \") # instead of the company name the ticker can be used as well\n",
+    "    c.execute(\"SELECT company_name, actual_value FROM DCA_portfolio\") # instead of the company name the ticker can be used as well\n",
     "    psvl = c.fetchall()\n",
     "    avs = sum([x[1] for x in psvl])\n",
     "    for comp, value in psvl:\n",
-    "        c.execute(\"UPDATE DCA_portfolio SET share_in_portfolio = ? WHERE company_name = ?\", (100*value/(avs), comp))\n",
+    "        c.execute(\"UPDATE DCA_portfolio SET share_in_portfolio = ? WHERE company_name = ?\", (round_2(100*value/(avs)), comp))\n",
     "    conn.commit()\n",
     "    conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "speaking-mongolia",
    "metadata": {},
    "outputs": [],
@@ -419,35 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "id": "shaped-patio",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('company_name',\n",
-       "  'xxx',\n",
-       "  100,\n",
-       "  50.2,\n",
-       "  48.25,\n",
-       "  4825.0,\n",
-       "  5020.0,\n",
-       "  195.0,\n",
-       "  24.84226153655821),\n",
-       " ('company_name2',\n",
-       "  'yyy',\n",
-       "  75,\n",
-       "  102.5,\n",
-       "  102.5,\n",
-       "  7687.5,\n",
-       "  7687.5,\n",
-       "  0.0,\n",
-       "  38.042805888902635),\n",
-       " ('test', 't2', 200, 37.5, 37.5, 7500.0, 7500.0, 0.0, 37.114932574539154)]"
+       "[('company_name', 'xxx', 150, 51.2, 49.23, 7385.0, 7680.0, 3.99, 23.82),\n",
+       " ('company_name2', 'yyy', 175, 97.5, 99.64, 17437.5, 17062.5, -2.15, 52.92),\n",
+       " ('test', 't2', 200, 37.5, 37.5, 7500.0, 7500.0, 0.0, 23.26)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,13 +552,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elegant-relationship",
+   "id": "widespread-catalog",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def update_asset(company_name, ticker, shares, price):\n",
-    "    # to do similar operations for existing companies (verify the comp name and ticer)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
