--- a/Portfolio_DB_DCA_Strategy.ipynb
+++ b/Portfolio_DB_DCA_Strategy.ipynb
@@ -21,38 +21,9 @@
    "execution_count": 1,
    "id": "brown-journalist",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ipython-sql in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (0.4.0)\n",
-      "Requirement already satisfied: prettytable<1 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.7.2)\n",
-      "Requirement already satisfied: six in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.15.0)\n",
-      "Requirement already satisfied: sqlparse in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.4.2)\n",
-      "Requirement already satisfied: ipython-genutils>=0.1.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: ipython>=1.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (7.22.0)\n",
-      "Requirement already satisfied: sqlalchemy>=0.6.7 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython-sql) (1.4.28)\n",
-      "Requirement already satisfied: setuptools>=18.5 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (41.2.0)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.18.0)\n",
-      "Requirement already satisfied: traitlets>=4.2 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (5.0.5)\n",
-      "Requirement already satisfied: decorator in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (4.4.2)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (3.0.18)\n",
-      "Requirement already satisfied: pygments in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (2.8.1)\n",
-      "Requirement already satisfied: backcall in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.2.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.4.4)\n",
-      "Requirement already satisfied: pickleshare in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from ipython>=1.0->ipython-sql) (0.7.5)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from sqlalchemy>=0.6.7->ipython-sql) (1.1.2)\n",
-      "Requirement already satisfied: importlib-metadata in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from sqlalchemy>=0.6.7->ipython-sql) (3.9.0)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from jedi>=0.16->ipython>=1.0->ipython-sql) (0.8.1)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=1.0->ipython-sql) (0.2.5)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.4 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from importlib-metadata->sqlalchemy>=0.6.7->ipython-sql) (3.7.4.3)\n",
-      "Requirement already satisfied: zipp>=0.5 in c:\\users\\marcel\\appdata\\local\\programs\\python\\python37\\lib\\site-packages (from importlib-metadata->sqlalchemy>=0.6.7->ipython-sql) (3.4.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install ipython-sql"
+    "# !pip install ipython-sql"
    ]
   },
   {
@@ -548,14 +519,6 @@
    "source": [
     "show_portfolio()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "widespread-catalog",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
